Fixed overflowing title

--- a/css/main.css
+++ b/css/main.css
@@ -422,6 +422,10 @@ main {
 @media screen and (max-width: 680px) {
   main {
     padding: 0; }
+  h1.lg-heading, h2.lg-heading, h3.lg-heading {
+    font-size: 5rem; }
+  h1.sm-heading, h1.sm-heading-top, h2.sm-heading, h2.sm-heading-top, h3.sm-heading, h3.sm-heading-top {
+    margin-bottom: 2rem; }
   .menu-branding .portrait {
     width: 100px;
     height: 100px;
